(es) fixing ref links

--- a/locale/es/LC_MESSAGES/basic/pedestrian.po
+++ b/locale/es/LC_MESSAGES/basic/pedestrian.po
@@ -261,7 +261,7 @@ msgstr ""
 
 #: ../../build/docs/basic/pedestrian.rst:139
 msgid ":ref:`basic/appendix:**Exercise**: 1 (**Chapter:** Pedestrian)`"
-msgstr ":ref:`basic/appendix:**Ejercicio**: 1 (**Capítulo:** Peatón)`"
+msgstr ":ref:`basic/appendix:**Exercise**: 1 (**Chapter:** Pedestrian)`"
 
 #: ../../build/docs/basic/pedestrian.rst:142
 msgid ""
@@ -315,7 +315,7 @@ msgstr "El costo de estar en metros usando el atributo ``length_m`` (línea **6*
 
 #: ../../build/docs/basic/pedestrian.rst:180
 msgid ":ref:`basic/appendix:**Exercise**: 2 (**Chapter:** Pedestrian)`"
-msgstr ":ref:`basic/appendix:**Ejercicio**: 2 (**Capítulo:** Peatón)`"
+msgstr ":ref:`basic/appendix:**Exercise**: 2 (**Chapter:** Pedestrian)`"
 
 #: ../../build/docs/basic/pedestrian.rst:184
 msgid "Exercise 3: Many Pedestrians departing from the same location"
@@ -351,7 +351,7 @@ msgstr ""
 
 #: ../../build/docs/basic/pedestrian.rst:211
 msgid ":ref:`basic/appendix:**Exercise**: 3 (**Chapter:** Pedestrian)`"
-msgstr ":ref:`basic/appendix:**Ejercicio**: 3 (**Capítulo:** Peatón)`"
+msgstr ":ref:`basic/appendix:**Exercise**: 3 (**Chapter:** Pedestrian)`"
 
 #: ../../build/docs/basic/pedestrian.rst:215
 msgid "Exercise 4: Many Pedestrians going to different destinations"
@@ -390,7 +390,7 @@ msgstr "El resultado suma los costes por destino."
 
 #: ../../build/docs/basic/pedestrian.rst:245
 msgid ":ref:`basic/appendix:**Exercise**: 4 (**Chapter:** Pedestrian)`"
-msgstr ":ref:`basic/appendix:**Ejercicio**: 4 (**Capítulo:** Peatón)`"
+msgstr ":ref:`basic/appendix:**Exercise**: 4 (**Chapter:** Pedestrian)`"
 
 #: ../../build/docs/scripts/basic/chapter_5/note_1.txt:1
 msgid "Inspecting the results, looking for totals (edge = -1):"
@@ -488,7 +488,7 @@ msgstr "Resultado como costos agregados."
 
 #: ../../build/docs/basic/pedestrian.rst:304
 msgid ":ref:`basic/appendix:**Exercise**: 5 (**Chapter:** Pedestrian)`"
-msgstr ":ref:`basic/appendix:**Ejercicio**: 5 (**Capítulo:** Peatón)`"
+msgstr ":ref:`basic/appendix:**Exercise**: 5 (**Chapter:** Pedestrian)`"
 
 #: ../../build/docs/basic/pedestrian.rst:306
 msgid ""
@@ -520,7 +520,7 @@ msgstr ""
 
 #: ../../build/docs/basic/pedestrian.rst:337
 msgid ":ref:`basic/appendix:**Exercise**: 6 (**Chapter:** Pedestrian)`"
-msgstr ":ref:`basic/appendix:**Ejercicio**: 6 (**Capítulo:** Peatón)`"
+msgstr ":ref:`basic/appendix:**Exercise**: 6 (**Chapter:** Pedestrian)`"
 
 #: ../../build/docs/scripts/basic/chapter_5/note_2.txt:1
 msgid ""
