--- a/locale/es/LC_MESSAGES/basic/sql_function.po
+++ b/locale/es/LC_MESSAGES/basic/sql_function.po
@@ -449,7 +449,7 @@ msgstr "Contar las filas en la vista ``vehicle_net`` (línea **2**)"
 
 #: ../../build/docs/basic/sql_function.rst:155
 msgid ":ref:`basic/appendix:**Exercise**: 1 (**Chapter:** SQL)`"
-msgstr ":ref:`basic/appendix:**Ejercicio**: 1 (**Capítulo:** SQL)`"
+msgstr ":ref:`basic/appendix:**Exercise**: 1 (**Chapter:** SQL)`"
 
 #: ../../build/docs/basic/sql_function.rst:159
 msgid "Exercise 2: Limiting the road network within an area"
@@ -513,7 +513,7 @@ msgstr "Contar las filas en el ``taxi_net`` original"
 
 #: ../../build/docs/basic/sql_function.rst:201
 msgid ":ref:`basic/appendix:**Exercise**: 2 (**Chapter:** SQL)`"
-msgstr ":ref:`basic/appendix:**Ejercicio**: 2 (**Capítulo:** SQL)`"
+msgstr ":ref:`basic/appendix:**Exercise**: 2 (**Chapter:** SQL)`"
 
 #: ../../build/docs/basic/sql_function.rst:204
 msgid "Exercise 3: Creating a materialized view for routing pedestrians"
@@ -555,7 +555,7 @@ msgstr "Cuente las filas de la vista ``walk_net`` (line **1**)"
 
 #: ../../build/docs/basic/sql_function.rst:253
 msgid ":ref:`basic/appendix:**Exercise**: 3 (**Chapter:** SQL)`"
-msgstr ":ref:`basic/appendix:**Ejercicio**: 3 (**Capítulo:** SQL)`"
+msgstr ":ref:`basic/appendix:**Exercise**: 3 (**Chapter:** SQL)`"
 
 #: ../../build/docs/basic/sql_function.rst:257
 msgid "Exercise 4: Testing the views for routing"
@@ -701,7 +701,7 @@ msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:337
 msgid ":ref:`basic/appendix:**Exercise**: 4 (**Chapter:** SQL)`"
-msgstr ":ref:`basic/appendix:**Ejercicio**: 4 (**Capítulo:** SQL)`"
+msgstr ":ref:`basic/appendix:**Exercise**: 4 (**Chapter:** SQL)`"
 
 #: ../../build/docs/basic/sql_function.rst:341
 msgid "Exercise 5: Get additional information"
@@ -772,7 +772,7 @@ msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:379
 msgid ":ref:`basic/appendix:**Exercise**: 5 (**Chapter:** SQL)`"
-msgstr ":ref:`basic/appendix:**Ejercicio**: 5 (**Capítulo:** SQL)`"
+msgstr ":ref:`basic/appendix:**Exercise**: 5 (**Chapter:** SQL)`"
 
 #: ../../build/docs/basic/sql_function.rst:385
 msgid "Geometry handling"
@@ -856,7 +856,7 @@ msgstr "Como antes ``LEFT JOIN`` con ``vehicle_net``. (línea **11**)"
 
 #: ../../build/docs/basic/sql_function.rst:432
 msgid ":ref:`basic/appendix:**Exercise**: 6 (**Chapter:** SQL)`"
-msgstr ":ref:`basic/appendix:**Ejercicio**: 6 (**Capítulo:** SQL)`"
+msgstr ":ref:`basic/appendix:**Exercise**: 6 (**Chapter:** SQL)`"
 
 #: ../../build/docs/basic/sql_function.rst:437
 msgid "Exercise 7: Route geometry (binary format)"
@@ -889,7 +889,7 @@ msgstr "``the_geom``, incluido el cambio de nombre (línea **9**)"
 
 #: ../../build/docs/basic/sql_function.rst:470
 msgid ":ref:`basic/appendix:**Exercise**: 7 (**Chapter:** SQL)`"
-msgstr ":ref:`basic/appendix:**Ejercicio**: 7 (**Capítulo:** SQL)`"
+msgstr ":ref:`basic/appendix:**Exercise**: 7 (**Chapter:** SQL)`"
 
 #: ../../build/docs/basic/sql_function.rst:474
 msgid "Exercise 8: Route geometry directionality"
@@ -995,7 +995,7 @@ msgstr "La geometría cuando ``node`` es la columna ``source``. (línea **17**)"
 
 #: ../../build/docs/basic/sql_function.rst:540
 msgid ":ref:`basic/appendix:**Exercise**: 8 (**Chapter:** SQL)`"
-msgstr ":ref:`basic/appendix:**Ejercicio**: 8 (**Capítulo:** SQL)`"
+msgstr ":ref:`basic/appendix:**Exercise**: 8 (**Chapter:** SQL)`"
 
 #: ../../build/docs/basic/sql_function.rst:545
 msgid "Exercise 9: Using the geometry"
@@ -1071,7 +1071,7 @@ msgstr "Calcula el azimut de ``route_geom``. (línea **26**)"
 
 #: ../../build/docs/basic/sql_function.rst:589
 msgid ":ref:`basic/appendix:**Exercise**: 9 (**Chapter:** SQL)`"
-msgstr ":ref:`basic/appendix:**Ejercicio**: 9 (**Capítulo:** SQL)`"
+msgstr ":ref:`basic/appendix:**Exercise**: 9 (**Chapter:** SQL)`"
 
 #: ../../build/docs/basic/sql_function.rst:594
 msgid "Creating the Function"
@@ -1181,7 +1181,7 @@ msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:652
 msgid ":ref:`basic/appendix:**Exercise**: 10 (**Chapter:** SQL)`"
-msgstr ":ref:`basic/appendix:**Ejercicio**: 10 (**Capítulo:** SQL)`"
+msgstr ":ref:`basic/appendix:**Exercise**: 10 (**Chapter:** SQL)`"
 
 #: ../../build/docs/basic/sql_function.rst:657
 msgid "Exercise 11: Using the function"
@@ -1206,7 +1206,7 @@ msgstr "El primer parámetro cambia en función de la vista que se va a probar"
 
 #: ../../build/docs/basic/sql_function.rst:674
 msgid ":ref:`basic/appendix:**Exercise**: 11 (**Chapter:** SQL)`"
-msgstr ":ref:`basic/appendix:**Ejercicio**: 11 (**Capítulo:** SQL)`"
+msgstr ":ref:`basic/appendix:**Exercise**: 11 (**Chapter:** SQL)`"
 
 #: ../../build/docs/basic/sql_function.rst:677
 msgid "Use the function"
