--- a/locale/es/LC_MESSAGES/basic/vehicle.po
+++ b/locale/es/LC_MESSAGES/basic/vehicle.po
@@ -208,7 +208,7 @@ msgstr ""
 
 #: ../../build/docs/basic/vehicle.rst:112
 msgid ":ref:`basic/appendix:**Exercise**: 1 (**Chapter:** Vehicle)`"
-msgstr ":ref:`basic/appendix:**Ejercicio**: 1 (**Capítulo:** Vehículo)`"
+msgstr ":ref:`basic/appendix:**Exercise**: 1 (**Chapter:** Vehicle)`"
 
 #: ../../build/docs/basic/vehicle.rst:116
 msgid "Exercise 2: Vehicle routing - returning"
@@ -232,7 +232,7 @@ msgstr ""
 
 #: ../../build/docs/basic/vehicle.rst:140
 msgid ":ref:`basic/appendix:**Exercise**: 2 (**Chapter:** Vehicle)`"
-msgstr ":ref:`basic/appendix:**Ejercicio**: 2 (**Capítulo:** Vehículo)`"
+msgstr ":ref:`basic/appendix:**Exercise**: 2 (**Chapter:** Vehicle)`"
 
 #: ../../build/docs/basic/vehicle.rst:142
 msgid ""
@@ -277,7 +277,7 @@ msgstr "El costo en ``$`` es ``cost_s / 3600 * 100``."
 
 #: ../../build/docs/basic/vehicle.rst:173
 msgid ":ref:`basic/appendix:**Exercise**: 3 (**Chapter:** Vehicle)`"
-msgstr ":ref:`basic/appendix:**Ejercicio**: 3 (**Capítulo:** Vehículo)`"
+msgstr ":ref:`basic/appendix:**Exercise**: 3 (**Chapter:** Vehicle)`"
 
 #: ../../build/docs/basic/vehicle.rst:176
 msgid "Comparing with `Exercise 2: Vehicle routing - returning`_:"
@@ -422,7 +422,7 @@ msgstr ""
 
 #: ../../build/docs/basic/vehicle.rst:282
 msgid ":ref:`basic/appendix:**Exercise**: 4 (**Chapter:** Vehicle)`"
-msgstr ":ref:`basic/appendix:**Ejercicio**: 4 (**Capítulo:** Vehículo)`"
+msgstr ":ref:`basic/appendix:**Exercise**: 4 (**Chapter:** Vehicle)`"
 
 #: ../../build/docs/basic/vehicle.rst:286
 msgid "Exercise 5: Vehicle routing with penalization"
@@ -491,7 +491,7 @@ msgstr ""
 
 #: ../../build/docs/basic/vehicle.rst:329
 msgid ":ref:`basic/appendix:**Exercise**: 5 (**Chapter:** Vehicle)`"
-msgstr ":ref:`basic/appendix:**Ejercicio**: 5 (**Capítulo:** Vehículo)`"
+msgstr ":ref:`basic/appendix:**Exercise**: 5 (**Chapter:** Vehicle)`"
 
 #: ../../build/docs/basic/vehicle.rst:332
 msgid "Comparing with `Exercise 3: Vehicle routing when time is money`_:"
