--- a/locale/es/LC_MESSAGES/basic/appendix.po
+++ b/locale/es/LC_MESSAGES/basic/appendix.po
@@ -39,7 +39,7 @@ msgstr "**Ejercicio**: 1 (**Capítulo:** Peatón)"
 
 #: ../../build/docs/basic/appendix.rst:19
 msgid ":ref:`basic/pedestrian:Exercise 1: Single pedestrian routing`"
-msgstr ":ref:`basic/pedestrian:Ejercicio 1: Ruteo para un sólo peatón`"
+msgstr ":ref:`basic/pedestrian:Exercise 1: Single pedestrian routing`"
 
 #: ../../build/docs/basic/appendix.rst:25
 msgid "**Exercise**: 2 (**Chapter:** Pedestrian)"
@@ -50,7 +50,8 @@ msgid ""
 ":ref:`basic/pedestrian:Exercise 2: Many Pedestrians going to the same "
 "destination`"
 msgstr ""
-":ref:`basic/pedestrian:Ejercicio 2: Muchos peatones van al mismo destino`"
+":ref:`basic/pedestrian:Exercise 2: Many Pedestrians going to the same "
+"destination`"
 
 #: ../../build/docs/basic/appendix.rst:33
 msgid "**Exercise**: 3 (**Chapter:** Pedestrian)"
@@ -61,8 +62,8 @@ msgid ""
 ":ref:`basic/pedestrian:Exercise 3: Many Pedestrians departing from the "
 "same location`"
 msgstr ""
-":ref:`basic/pedestrian:Ejercicio 3: Muchos peatones que salen de la misma "
-"ubicación`"
+":ref:`basic/pedestrian:Exercise 3: Many Pedestrians departing from the "
+"same location`"
 
 #: ../../build/docs/basic/appendix.rst:41
 msgid "**Exercise**: 4 (**Chapter:** Pedestrian)"
@@ -73,8 +74,8 @@ msgid ""
 ":ref:`basic/pedestrian:Exercise 4: Many Pedestrians going to different "
 "destinations`"
 msgstr ""
-":ref:`basic/pedestrian:Ejercicio 4: Muchos peatones que van a diferentes "
-"destinos`"
+":ref:`basic/pedestrian:Exercise 4: Many Pedestrians going to different "
+"destinations`"
 
 #: ../../build/docs/basic/appendix.rst:49
 msgid "**Exercise**: 5 (**Chapter:** Pedestrian)"
@@ -97,8 +98,8 @@ msgid ""
 ":ref:`basic/pedestrian:Exercise 6: Many Pedestrians going to different "
 "destinations summarizing the total costs per departure`"
 msgstr ""
-":ref:`basic/pedestrian:Ejercicio 6: Muchos peatones van a diferentes "
-"destinos resumiendo costos totales por salida`"
+":ref:`basic/pedestrian:Exercise 6: Many Pedestrians going to different "
+"destinations summarizing the total costs per departure`"
 
 #: ../../build/docs/basic/appendix.rst:65
 msgid "Solutions to :doc:`vehicle`"
@@ -110,7 +111,7 @@ msgstr "**Ejercicio**: 1 (**Capítulo:** vehículo)"
 
 #: ../../build/docs/basic/appendix.rst:70
 msgid ":ref:`basic/vehicle:Exercise 1: Vehicle routing - going`"
-msgstr ":ref:`basic/vehicle:Ejercicio 1: Ruteo de vehículos - ida`"
+msgstr ":ref:`basic/vehicle:Exercise 1: Vehicle routing - going`"
 
 #: ../../build/docs/basic/appendix.rst:76
 msgid "**Exercise**: 2 (**Chapter:** Vehicle)"
@@ -118,7 +119,7 @@ msgstr "**Ejercicio**: 2 (**Capítulo:** Vehículo)"
 
 #: ../../build/docs/basic/appendix.rst:78
 msgid ":ref:`basic/vehicle:Exercise 2: Vehicle routing - returning`"
-msgstr ":ref:`basic/vehicle:Ejercicio 2: Ruteo de vehículos - regreso`"
+msgstr ":ref:`basic/vehicle:Exercise 2: Vehicle routing - returning`"
 
 #: ../../build/docs/basic/appendix.rst:84
 msgid "**Exercise**: 3 (**Chapter:** Vehicle)"
@@ -126,9 +127,7 @@ msgstr "**Ejercicio**: 3 (**Capítulo:** Vehículo)"
 
 #: ../../build/docs/basic/appendix.rst:86
 msgid ":ref:`basic/vehicle:Exercise 3: Vehicle routing when time is money`"
-msgstr ""
-":ref:`basic/vehicle:Ejercicio 3: Ruteo de vehículos cuando el tiempo es "
-"dinero`"
+msgstr ":ref:`basic/vehicle:Exercise 3: Vehicle routing when time is money`"
 
 #: ../../build/docs/basic/appendix.rst:92
 msgid "**Exercise**: 4 (**Chapter:** Vehicle)"
@@ -136,7 +135,7 @@ msgstr "**Ejercicio**: 4 (**Capítulo:** Vehículo)"
 
 #: ../../build/docs/basic/appendix.rst:94
 msgid ":ref:`basic/vehicle:Exercise 4: Vehicle routing without penalization`"
-msgstr ":ref:`basic/vehicle:Ejercicio 4: Ruteo de vehículos sin penalización`"
+msgstr ":ref:`basic/vehicle:Exercise 4: Vehicle routing without penalization`"
 
 #: ../../build/docs/basic/appendix.rst:100
 msgid "**Exercise**: 5 (**Chapter:** Vehicle)"
@@ -144,7 +143,7 @@ msgstr "**Ejercicio**: 5 (**Capítulo:** Vehículo)"
 
 #: ../../build/docs/basic/appendix.rst:102
 msgid ":ref:`basic/vehicle:Exercise 5: Vehicle routing with penalization`"
-msgstr ":ref:`basic/vehicle:Ejercicio 5: Ruteo de vehículos con penalización`"
+msgstr ":ref:`basic/vehicle:Exercise 5: Vehicle routing with penalization`"
 
 #: ../../build/docs/basic/appendix.rst:109
 msgid "Solutions to :doc:`sql_function`"
@@ -156,8 +155,7 @@ msgstr "**Ejercicio**: 1 (**Capítulo:** SQL)"
 
 #: ../../build/docs/basic/appendix.rst:115
 msgid ":ref:`basic/sql_function:Exercise 1: Creating a view for routing`"
-msgstr ""
-":ref:`basic/sql_function:Ejercicio 1: Creación de una vista para el ruteo`"
+msgstr ":ref:`basic/sql_function:Exercise 1: Creating a view for routing`"
 
 #: ../../build/docs/basic/appendix.rst:121
 msgid "**Exercise**: 2 (**Chapter:** SQL)"
@@ -168,8 +166,8 @@ msgid ""
 ":ref:`basic/sql_function:Exercise 2: Limiting the road network within an "
 "area`"
 msgstr ""
-":ref:`basic/sql_function:Ejercicio 2: Limitar la red viaria dentro de un "
-"área`"
+":ref:`basic/sql_function:Exercise 2: Limiting the road network within an "
+"area`"
 
 #: ../../build/docs/basic/appendix.rst:128
 msgid "**Exercise**: 3 (**Chapter:** SQL)"
@@ -180,8 +178,8 @@ msgid ""
 ":ref:`basic/sql_function:Exercise 3: Creating a materialized view for "
 "routing pedestrians`"
 msgstr ""
-":ref:`basic/sql_function:Ejercicio 3: Creación de una vista materializada "
-"para ruteo de los peatones`"
+":ref:`basic/sql_function:Exercise 3: Creating a materialized view for "
+"routing pedestrians`"
 
 #: ../../build/docs/basic/appendix.rst:136
 msgid "**Exercise**: 4 (**Chapter:** SQL)"
@@ -189,7 +187,7 @@ msgstr "**Ejercicio**: 4 (**Capítulo:** SQL)"
 
 #: ../../build/docs/basic/appendix.rst:138
 msgid ":ref:`basic/sql_function:Exercise 4: Testing the views for routing`"
-msgstr ":ref:`basic/sql_function:Ejercicio 4: Probar las vistas para el ruteo`"
+msgstr ":ref:`basic/sql_function:Exercise 4: Testing the views for routing`"
 
 #: ../../build/docs/basic/appendix.rst:145
 msgid "**Exercise**: 5 (**Chapter:** SQL)"
@@ -197,7 +195,7 @@ msgstr "**Ejercicio**: 5 (**Capítulo:** SQL)"
 
 #: ../../build/docs/basic/appendix.rst:147
 msgid ":ref:`basic/sql_function:Exercise 5: Get additional information`"
-msgstr ":ref:`basic/sql_function:Ejercicio 5: Obtener información adicional`"
+msgstr ":ref:`basic/sql_function:Exercise 5: Get additional information`"
 
 #: ../../build/docs/basic/appendix.rst:153
 msgid "**Exercise**: 6 (**Chapter:** SQL)"
@@ -205,9 +203,7 @@ msgstr "**Ejercicio**: 6 (**Capítulo:** SQL)"
 
 #: ../../build/docs/basic/appendix.rst:155
 msgid ":ref:`basic/sql_function:Exercise 6: Route geometry (human readable)`"
-msgstr ""
-":ref:`basic/sql_function:Ejercicio 6: Geometría de la ruta (legible para "
-"humanos)`"
+msgstr ":ref:`basic/sql_function:Exercise 6: Route geometry (human readable)`"
 
 #: ../../build/docs/basic/appendix.rst:161
 msgid "**Exercise**: 7 (**Chapter:** SQL)"
@@ -215,8 +211,7 @@ msgstr "**Ejercicio**: 7 (**Capítulo:** SQL)"
 
 #: ../../build/docs/basic/appendix.rst:163
 msgid ":ref:`basic/sql_function:Exercise 7: Route geometry (binary format)`"
-msgstr ""
-":ref:`basic/sql_function:Ejercicio 7: Geometría de ruta (formato binario)`"
+msgstr ":ref:`basic/sql_function:Exercise 7: Route geometry (binary format)`"
 
 #: ../../build/docs/basic/appendix.rst:169
 msgid "**Exercise**: 8 (**Chapter:** SQL)"
@@ -224,9 +219,7 @@ msgstr "**Ejercicio**: 8 (**Capítulo:** SQL)"
 
 #: ../../build/docs/basic/appendix.rst:171
 msgid ":ref:`basic/sql_function:Exercise 8: Route geometry directionality`"
-msgstr ""
-":ref:`basic/sql_function:Ejercicio 8: Direccionalidad de la geometría de la "
-"ruta`"
+msgstr ":ref:`basic/sql_function:Exercise 8: Route geometry directionality`"
 
 #: ../../build/docs/basic/appendix.rst:177
 msgid "**Exercise**: 9 (**Chapter:** SQL)"
@@ -234,7 +227,7 @@ msgstr "**Ejercicio**: 9 (**Capítulo:** SQL)"
 
 #: ../../build/docs/basic/appendix.rst:179
 msgid ":ref:`basic/sql_function:Exercise 9: Using the geometry`"
-msgstr ":ref:`basic/sql_function:Ejercicio 9: Uso de la geometría`"
+msgstr ":ref:`basic/sql_function:Exercise 9: Using the geometry`"
 
 #: ../../build/docs/basic/appendix.rst:185
 msgid "**Exercise**: 10 (**Chapter:** SQL)"
@@ -242,7 +235,7 @@ msgstr "**Ejercicio**: 10 (**Capítulo:** SQL)"
 
 #: ../../build/docs/basic/appendix.rst:187
 msgid ":ref:`basic/sql_function:Exercise 10: Function for an application`"
-msgstr ":ref:`basic/sql_function:Ejercicio 10: Función para una aplicación`"
+msgstr ":ref:`basic/sql_function:Exercise 10: Function for an application`"
 
 #: ../../build/docs/basic/appendix.rst:192
 msgid "**Exercise**: 11 (**Chapter:** SQL)"
@@ -250,7 +243,7 @@ msgstr "**Ejercicio**: 11 (**Capítulo:** SQL)"
 
 #: ../../build/docs/basic/appendix.rst:194
 msgid ":ref:`basic/sql_function:Exercise 11: Using the function`"
-msgstr ":ref:`basic/sql_function:Ejercicio 11: Uso de la función`"
+msgstr ":ref:`basic/sql_function:Exercise 11: Using the function`"
 
 #: ../../build/docs/basic/appendix.rst:200
 msgid "Solutions to :doc:`plpgsql_function`"
@@ -262,7 +255,7 @@ msgstr "**Ejercicio**: 1 (**Capítulo:** pl/pgsql)"
 
 #: ../../build/docs/basic/appendix.rst:205
 msgid ":ref:`basic/plpgsql_function:Exercise 1: Number of Vertices`"
-msgstr ":ref:`basic/plpgsql_function:Ejercicio 1: Número de vértices`"
+msgstr ":ref:`basic/plpgsql_function:Exercise 1: Number of Vertices`"
 
 #: ../../build/docs/basic/appendix.rst:207
 #: ../../build/docs/basic/appendix.rst:246
@@ -291,7 +284,7 @@ msgstr "**Ejercicio**: 2 (**Capítulo:** pl/pgsql)"
 
 #: ../../build/docs/basic/appendix.rst:226
 msgid ":ref:`basic/plpgsql_function:Exercise 2: Vertices on a table`"
-msgstr ":ref:`basic/plpgsql_function:Ejercicio 2: Vértices en una tabla`"
+msgstr ":ref:`basic/plpgsql_function:Exercise 2: Vertices on a table`"
 
 #: ../../build/docs/basic/appendix.rst:242
 msgid "**Exercise**: 3 (**Chapter:** pl/pgsql)"
@@ -299,7 +292,7 @@ msgstr "**Ejercicio**: 3 (**Capítulo:** pl/pgsql)"
 
 #: ../../build/docs/basic/appendix.rst:244
 msgid ":ref:`basic/plpgsql_function:Exercise 3: Nearest Vertex`"
-msgstr ":ref:`basic/plpgsql_function:Ejercicio 3: Vértice más cercano`"
+msgstr ":ref:`basic/plpgsql_function:Exercise 3: Nearest Vertex`"
 
 #: ../../build/docs/basic/appendix.rst:250
 #: ../../build/docs/basic/appendix.rst:279
@@ -322,8 +315,7 @@ msgstr "**Ejercicio**: 4 (**Capítulo:** pl/pgsql)"
 
 #: ../../build/docs/basic/appendix.rst:266
 msgid ":ref:`basic/plpgsql_function:Exercise 4: Nearest vertex function`"
-msgstr ""
-":ref:`basic/plpgsql_function:Ejercicio 4: Función de vértice más cercano`"
+msgstr ":ref:`basic/plpgsql_function:Exercise 4: Nearest vertex function`"
 
 #: ../../build/docs/basic/appendix.rst:271
 msgid "**Exercise**: 5 (**Chapter:** pl/pgsql)"
@@ -331,9 +323,7 @@ msgstr "**Ejercicio**: 5 (**Capítulo:** pl/pgsql)"
 
 #: ../../build/docs/basic/appendix.rst:273
 msgid ":ref:`basic/plpgsql_function:Exercise 5: Test nearest vertex function`"
-msgstr ""
-":ref:`basic/plpgsql_function:Ejercicio 5: Prueba de la función vértice más "
-"cercano`"
+msgstr ":ref:`basic/plpgsql_function:Exercise 5: Test nearest vertex function`"
 
 #: ../../build/docs/basic/appendix.rst:293
 msgid "**Exercise**: 6 (**Chapter:** pl/pgsql)"
@@ -341,8 +331,7 @@ msgstr "**Ejercicio**: 6 (**Capítulo:** pl/pgsql)"
 
 #: ../../build/docs/basic/appendix.rst:295
 msgid ":ref:`basic/plpgsql_function:Exercise 6: Creating the main function`"
-msgstr ""
-":ref:`basic/plpgsql_function:Ejercicio 6: Creación de la función principal`"
+msgstr ":ref:`basic/plpgsql_function:Exercise 6: Creating the main function`"
 
 #: ../../build/docs/basic/appendix.rst:300
 msgid "**Exercise**: 7 (**Chapter:** pl/pgsql)"
@@ -350,7 +339,7 @@ msgstr "**Ejercicio**: 7 (**Capítulo:** pl/pgsql)"
 
 #: ../../build/docs/basic/appendix.rst:302
 msgid ":ref:`basic/plpgsql_function:Exercise 7: Using the main function`"
-msgstr ":ref:`basic/plpgsql_function:Ejercicio 7: Uso de la función principal`"
+msgstr ":ref:`basic/plpgsql_function:Exercise 7: Using the main function`"
 
 #: ../../build/docs/basic/appendix.rst:304
 msgid "For ``vehicle_net``"
