--- a/locale/es/LC_MESSAGES/basic/plpgsql_function.po
+++ b/locale/es/LC_MESSAGES/basic/plpgsql_function.po
@@ -437,7 +437,7 @@ msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:165
 msgid ":ref:`basic/appendix:**Exercise**: 1 (**Chapter:** pl/pgsql)`"
-msgstr ":ref:`basic/appendix:**Ejercicio**: 1 (**Capítulo:** pl/pgsql)`"
+msgstr ":ref:`basic/appendix:**Exercise**: 1 (**Chapter:** pl/pgsql)`"
 
 #: ../../build/docs/basic/plpgsql_function.rst:168
 msgid "Exercise 2: Vertices on a table"
@@ -540,7 +540,7 @@ msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:240
 msgid ":ref:`basic/appendix:**Exercise**: 2 (**Chapter:** pl/pgsql)`"
-msgstr ":ref:`basic/appendix:**Ejercicio**: 2 (**Capítulo:** pl/pgsql)`"
+msgstr ":ref:`basic/appendix:**Exercise**: 2 (**Chapter:** pl/pgsql)`"
 
 #: ../../build/docs/basic/plpgsql_function.rst:243
 msgid "Exercise 3: Nearest Vertex"
@@ -665,7 +665,7 @@ msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:315
 msgid ":ref:`basic/appendix:**Exercise**: 3 (**Chapter:** pl/pgsql)`"
-msgstr ":ref:`basic/appendix:**Ejercicio**: 3 (**Capítulo:** pl/pgsql)`"
+msgstr ":ref:`basic/appendix:**Exercise**: 3 (**Chapter:** pl/pgsql)`"
 
 #: ../../build/docs/basic/plpgsql_function.rst:318
 msgid "Exercise 4: Nearest vertex function"
@@ -777,7 +777,7 @@ msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:368
 msgid ":ref:`basic/appendix:**Exercise**: 4 (**Chapter:** pl/pgsql)`"
-msgstr ":ref:`basic/appendix:**Ejercicio**: 4 (**Capítulo:** pl/pgsql)`"
+msgstr ":ref:`basic/appendix:**Exercise**: 4 (**Chapter:** pl/pgsql)`"
 
 #: ../../build/docs/basic/plpgsql_function.rst:372
 msgid "Exercise 5: Test nearest vertex function"
@@ -873,7 +873,7 @@ msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:455
 msgid ":ref:`basic/appendix:**Exercise**: 5 (**Chapter:** pl/pgsql)`"
-msgstr ":ref:`basic/appendix:**Ejercicio**: 5 (**Capítulo:** pl/pgsql)`"
+msgstr ":ref:`basic/appendix:**Exercise**: 5 (**Chapter:** pl/pgsql)`"
 
 #: ../../build/docs/basic/plpgsql_function.rst:459
 msgid "wrk_fromAtoB function"
@@ -924,8 +924,8 @@ msgid ""
 "``wrk_dijkstra`` created on :ref:`basic/sql_function:Exercise 10: "
 "Function for an application`."
 msgstr ""
-"``wrk_dijkstra`` creado en :ref:`basic/sql_function:Ejercicio 10: Función "
-"para una aplicación`."
+"``wrk_dijkstra`` creado en :ref:`basic/sql_function:Exercise 10: "
+"Function for an application`."
 
 #: ../../build/docs/basic/plpgsql_function.rst:482
 msgid "The function's signature:"
@@ -1039,7 +1039,7 @@ msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:532
 msgid ":ref:`basic/appendix:**Exercise**: 6 (**Chapter:** pl/pgsql)`"
-msgstr ":ref:`basic/appendix:**Ejercicio**: 6 (**Capítulo:** pl/pgsql)`"
+msgstr ":ref:`basic/appendix:**Exercise**: 6 (**Chapter:** pl/pgsql)`"
 
 #: ../../build/docs/basic/plpgsql_function.rst:535
 msgid "Exercise 7: Using the main function"
@@ -1126,4 +1126,4 @@ msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:605
 msgid ":ref:`basic/appendix:**Exercise**: 7 (**Chapter:** pl/pgsql)`"
-msgstr ":ref:`basic/appendix:**Ejercicio**: 7 (**Capítulo:** pl/pgsql)`"
+msgstr ":ref:`basic/appendix:**Exercise**: 7 (**Chapter:** pl/pgsql)`"
