(es) updating ref on un-sdg chapters

--- a/locale/es/LC_MESSAGES/un_sdg/sdg11-cities.po
+++ b/locale/es/LC_MESSAGES/un_sdg/sdg11-cities.po
@@ -139,7 +139,7 @@ msgstr "Ejercicio 1: Crear un punto para la ciudad"
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:78
 msgid ":ref:`un_sdg/appendix:**Exercise:** 1 (**Chapter:** SDG 11)`"
-msgstr ":ref:`un_sdg/appendix:**Ejercicio:** 1 (**Capítulo:** ODS 11)`"
+msgstr ":ref:`un_sdg/appendix:**Exercise:** 1 (**Chapter:** SDG 11)`"
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:80
 msgid ""
@@ -266,7 +266,7 @@ msgstr ""
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:192
 msgid ":ref:`un_sdg/appendix:**Exercise:** 6 (**Chapter:** SDG 11)`"
-msgstr ":ref:`un_sdg/appendix:**Ejercicio:** 6 (**Capítulo:** ODS 11)`"
+msgstr ":ref:`un_sdg/appendix:**Exercise:** 6 (**Chapter:** SDG 11)`"
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:195
 msgid "Exercise 7: Removing the Rivers which are in swamps"
@@ -285,7 +285,7 @@ msgstr ""
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:209
 msgid ":ref:`un_sdg/appendix:**Exercise:** 7 (**Chapter:** SDG 11)`"
-msgstr ":ref:`un_sdg/appendix:**Ejercicio:** 7 (**Capítulo:** ODS 11)`"
+msgstr ":ref:`un_sdg/appendix:**Exercise:** 7 (**Chapter:** SDG 11)`"
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:212
 msgid "pgr_connectedComponents for preprocessing waterways"
@@ -375,7 +375,7 @@ msgstr ""
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:269
 msgid ":ref:`un_sdg/appendix:**Exercise:** 8 (**Chapter:** SDG 11)`"
-msgstr ":ref:`un_sdg/appendix:**Ejercicio:** 8 (**Capítulo:** ODS 11)`"
+msgstr ":ref:`un_sdg/appendix:**Exercise:** 8 (**Chapter:** SDG 11)`"
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:272
 msgid "Exercise 9: Creating buffer around the city"
@@ -408,7 +408,7 @@ msgstr "Visualización de los resultados de la operación de búfer"
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:303
 msgid ":ref:`un_sdg/appendix:**Exercise:** 9 (**Chapter:** SDG 11)`"
-msgstr ":ref:`un_sdg/appendix:**Ejercicio:** 9 (**Capítulo:** ODS 11)`"
+msgstr ":ref:`un_sdg/appendix:**Exercise:** 9 (**Chapter:** SDG 11)`"
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:306
 msgid "Exercise 10: Creating a function that gets the city buffer"
@@ -451,7 +451,7 @@ msgstr ""
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:334
 msgid ":ref:`un_sdg/appendix:**Exercise:** 11 (**Chapter:** SDG 11)`"
-msgstr ":ref:`un_sdg/appendix:**Ejercicio:** 11 (**Capítulo:** ODS 11)`"
+msgstr ":ref:`un_sdg/appendix:**Exercise:** 11 (**Chapter:** SDG 11)`"
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:337
 msgid "Exercise 12: Get the rain zones"
@@ -486,7 +486,7 @@ msgstr ""
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:365
 msgid ":ref:`un_sdg/appendix:**Exercise:** 12 (**Chapter:** SDG 11)`"
-msgstr ":ref:`un_sdg/appendix:**Ejercicio:** 12 (**Capítulo:** ODS 11)`"
+msgstr ":ref:`un_sdg/appendix:**Exercise:** 12 (**Chapter:** SDG 11)`"
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:368
 msgid "Exercise 13: Create a union of rain zones"
@@ -502,4 +502,4 @@ msgstr ""
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:380
 msgid ":ref:`un_sdg/appendix:**Exercise:** 13 (**Chapter:** SDG 11)`"
-msgstr ":ref:`un_sdg/appendix:**Ejercicio:** 13 (**Capítulo:** ODS 11)`"
+msgstr ":ref:`un_sdg/appendix:**Exercise:** 13 (**Chapter:** SDG 11)`"
