(pot,en) Updating locale

--- a/locale/en/LC_MESSAGES/basic/pedestrian.po
+++ b/locale/en/LC_MESSAGES/basic/pedestrian.po
@@ -1,15 +1,15 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2010-2023 pgRouting Developers
+# Copyright (C) 2010-2024 pgRouting Developers
 # This file is distributed under the same license as the Workshop FOSS4G
-# Prizren package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2023.
+# Belém package.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2024.
 #
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Workshop FOSS4G Prizren 2.9\n"
+"Project-Id-Version: Workshop FOSS4G Belém 3.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-11-05 02:02+0000\n"
+"POT-Creation-Date: 2024-11-04 21:10-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: en\n"
@@ -18,7 +18,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.16.0\n"
+"Generated-By: Babel 2.12.1\n"
 
 #: ../../build/docs/basic/pedestrian.rst:11
 msgid "Pedestrian Routing"
@@ -185,7 +185,7 @@ msgstr ""
 msgid "Calculate routes with costs in *osm2pgRouting* `length` default units."
 msgstr ""
 
-#: ../../build/docs/basic/pedestrian.rst:116
+#: ../../build/docs/basic/pedestrian.rst:-1
 msgid "From the |place_1| to the |place_3|"
 msgstr ""
 
@@ -251,7 +251,7 @@ msgid ""
 "meters."
 msgstr ""
 
-#: ../../build/docs/basic/pedestrian.rst:158
+#: ../../build/docs/basic/pedestrian.rst:-1
 msgid "From |place_1| and |place_2| to |place_3|"
 msgstr ""
 
@@ -422,7 +422,7 @@ msgstr ""
 msgid "Get only the cost in minutes."
 msgstr ""
 
-#: ../../build/docs/basic/pedestrian.rst:310
+#: ../../build/docs/basic/pedestrian.rst:-1
 msgid "From the hotels to the |place_4| and |place_5|"
 msgstr ""
 
