--- a/locale/en/LC_MESSAGES/interactions/chapter-10.po
+++ b/locale/en/LC_MESSAGES/interactions/chapter-10.po
@@ -1,15 +1,15 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2010-2023 pgRouting Developers
+# Copyright (C) 2010-2024 pgRouting Developers
 # This file is distributed under the same license as the Workshop FOSS4G
-# Prizren package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2023.
+# Belém package.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2024.
 #
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Workshop FOSS4G Prizren 2.9\n"
+"Project-Id-Version: Workshop FOSS4G Belém 3.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-03-22 11:12-0600\n"
+"POT-Creation-Date: 2024-11-04 21:10-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: en\n"
@@ -18,7 +18,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.14.0\n"
+"Generated-By: Babel 2.12.1\n"
 
 #: ../../build/docs/interactions/chapter-10.rst:13
 msgid "WMS server with GeoServer"
