--- a/locale/en/LC_MESSAGES/basic/plpgsql_function.po
+++ b/locale/en/LC_MESSAGES/basic/plpgsql_function.po
@@ -1,15 +1,15 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2010-2023 pgRouting Developers
+# Copyright (C) 2010-2024 pgRouting Developers
 # This file is distributed under the same license as the Workshop FOSS4G
-# Prizren package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2023.
+# Belém package.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2024.
 #
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Workshop FOSS4G Prizren 2.9\n"
+"Project-Id-Version: Workshop FOSS4G Belém 3.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-11-05 02:02+0000\n"
+"POT-Creation-Date: 2024-11-04 21:10-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: en\n"
@@ -18,7 +18,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.16.0\n"
+"Generated-By: Babel 2.12.1\n"
 
 #: ../../build/docs/basic/plpgsql_function.rst:11
 msgid "pl/pgsql function"
@@ -498,15 +498,15 @@ msgstr ""
 msgid "Exercise 5: Test nearest vertex function"
 msgstr ""
 
-#: ../../build/docs/basic/plpgsql_function.rst:242
+#: ../../build/docs/basic/plpgsql_function.rst:-1
 msgid "Nearest Vertex in vehicle network"
 msgstr ""
 
-#: ../../build/docs/basic/plpgsql_function.rst:246
+#: ../../build/docs/basic/plpgsql_function.rst:-1
 msgid "Nearest Vertex in taki network"
 msgstr ""
 
-#: ../../build/docs/basic/plpgsql_function.rst:250
+#: ../../build/docs/basic/plpgsql_function.rst:-1
 msgid "Nearest Vertex in walk network"
 msgstr ""
 
@@ -684,7 +684,7 @@ msgstr ""
 msgid "Exercise 7: Using the main function"
 msgstr ""
 
-#: ../../build/docs/basic/plpgsql_function.rst:399
+#: ../../build/docs/basic/plpgsql_function.rst:-1
 msgid "View of roads for taxis along with source and destination"
 msgstr ""
 
