--- a/locale/en/LC_MESSAGES/general-intro/introduction.po
+++ b/locale/en/LC_MESSAGES/general-intro/introduction.po
@@ -1,15 +1,15 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2010-2023 pgRouting Developers
+# Copyright (C) 2010-2024 pgRouting Developers
 # This file is distributed under the same license as the Workshop FOSS4G
-# Prizren package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2023.
+# Belém package.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2024.
 #
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Workshop FOSS4G Prizren 2.9\n"
+"Project-Id-Version: Workshop FOSS4G Belém 3.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-09-22 04:16+0000\n"
+"POT-Creation-Date: 2024-11-04 21:10-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: en\n"
@@ -18,7 +18,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.16.0\n"
+"Generated-By: Babel 2.12.1\n"
 
 #: ../../build/docs/general-intro/introduction.rst:11
 msgid "Introduction"
@@ -30,9 +30,9 @@ msgstr ""
 
 #: ../../build/docs/general-intro/introduction.rst:15
 msgid ""
-"Please see the :doc:`contents <../index>` for full content of FOSS4G  "
-"workshop.  This workshop covers two levels for using pgRouting: `Basic`_ "
-"and `Advanced`_."
+"Please see the :doc:`contents <../index>` for full content of FOSS4G "
+"Belém workshop.  This workshop covers two levels for using pgRouting: "
+"`Basic`_ and `Advanced`_."
 msgstr ""
 
 #: ../../build/docs/general-intro/introduction.rst:20
@@ -118,12 +118,12 @@ msgstr ""
 msgid "Sponsored by"
 msgstr ""
 
-#: ../../build/docs/general-intro/introduction.rst:59
+#: ../../build/docs/general-intro/introduction.rst:-1
 msgid "Paragon Corporation"
 msgstr ""
 
 #: ../../build/docs/general-intro/introduction.rst:64
-msgid "Developers & presenters of FOSS4G  workshop:"
+msgid "Developers & presenters of FOSS4G Belém workshop:"
 msgstr ""
 
 #: ../../build/docs/general-intro/introduction.rst:65
@@ -170,15 +170,15 @@ msgstr ""
 msgid "Become a sponsor"
 msgstr ""
 
-#: ../../build/docs/general-intro/introduction.rst:99
+#: ../../build/docs/general-intro/introduction.rst:-1
 msgid "The Linux Foundation"
 msgstr ""
 
-#: ../../build/docs/general-intro/introduction.rst:104
+#: ../../build/docs/general-intro/introduction.rst:-1
 msgid "Open Collective"
 msgstr ""
 
-#: ../../build/docs/general-intro/introduction.rst:109
+#: ../../build/docs/general-intro/introduction.rst:-1
 msgid "OSGeo Foundation"
 msgstr ""
 
