(locale/es) marking string that need translation

--- a/locale/es/LC_MESSAGES/general-intro/introduction.po
+++ b/locale/es/LC_MESSAGES/general-intro/introduction.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Prizren 2.9\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-05-20 15:37-0600\n"
+"POT-Creation-Date: 2024-11-04 20:27-0600\n"
 "PO-Revision-Date: 2024-03-22 16:47+0000\n"
 "Last-Translator: Celia Virginia Vergara Castillo <vicky@erosion.dev>\n"
 "Language-Team: Spanish <https://weblate.osgeo.org/projects/"
@@ -35,9 +35,9 @@ msgstr ""
 #: ../../build/docs/general-intro/introduction.rst:15
 #, fuzzy
 msgid ""
-"Please see the :doc:`contents <../index>` for full content of **FOSS4G "
-"Prizren** workshop.  This workshop covers two levels for using pgRouting:"
-" `Basic`_ and `Advanced`_."
+"Please see the :doc:`contents <../index>` for full content of FOSS4G  "
+"workshop.  This workshop covers two levels for using pgRouting: `Basic`_ "
+"and `Advanced`_."
 msgstr ""
 "Consulte :doc:`contents <../index>` para obtener todo el contenido de "
 "este taller."
@@ -50,7 +50,7 @@ msgstr "Básico"
 #, fuzzy
 msgid ""
 "will demonstrate the routing functionality by providing examples using "
-"|osm-web| road network data from Prizren. Covering topics from how to "
+"|osm-web| road network data from Belém. Covering topics from how to "
 "prepare the data, making routing queries, understanding the results, up "
 "to writing a custom 'plpgsql' function that can be integrated with other "
 "FOSS tools."
@@ -85,8 +85,7 @@ msgstr "Escribir consultas avanzadas."
 
 #: ../../build/docs/general-intro/introduction.rst:33
 msgid "Writing a custom PostgreSQL stored procedure in `plpgsql`"
-msgstr ""
-"Escribir un procedimiento almacenado PostgreSQL personalizado en `plpgsql`"
+msgstr "Escribir un procedimiento almacenado PostgreSQL personalizado en `plpgsql`"
 
 #: ../../build/docs/general-intro/introduction.rst:36
 #: ../../build/docs/general-intro/introduction.rst:49
@@ -103,9 +102,9 @@ msgstr "Conocimiento previo: SQL (PostgreSQL, PostGIS)"
 
 #: ../../build/docs/general-intro/introduction.rst:39
 #: ../../build/docs/general-intro/introduction.rst:52
-msgid "Equipments: `OSGeoLive <https://live.osgeo.org>`__ (16.0)"
-msgstr ""
-"Equipos: Este taller utiliza `OSGeoLive <https://live.osgeo.org>`__ (16.0)"
+#, fuzzy
+msgid "Equipments: `OSGeoLive <https://live.osgeo.org>`__ (17)"
+msgstr "Equipos: Este taller utiliza `OSGeoLive <https://live.osgeo.org>`__ (16.0)"
 
 #: ../../build/docs/general-intro/introduction.rst:42
 msgid "Advanced"
@@ -140,7 +139,7 @@ msgid "Paragon Corporation"
 msgstr "Paragon Corporation"
 
 #: ../../build/docs/general-intro/introduction.rst:64
-msgid "Developers & presenters of FOSS4G Prizren workshop:"
+msgid "Developers & presenters of FOSS4G  workshop:"
 msgstr ""
 
 #: ../../build/docs/general-intro/introduction.rst:65
@@ -149,8 +148,8 @@ msgid ""
 "developer of pgRouting project and GSoC Mentor. OSGeo Charter member."
 msgstr ""
 "*Vicky Vergara* Es un desarrollador freelance de México. Es la "
-"desarrolladora principal del proyecto pgRouting y es tutora de GSoC. Miembro "
-"de OSGeo."
+"desarrolladora principal del proyecto pgRouting y es tutora de GSoC. "
+"Miembro de OSGeo."
 
 #: ../../build/docs/general-intro/introduction.rst:68
 msgid ""
@@ -185,8 +184,9 @@ msgid ""
 "This work is licensed under a `Creative Commons Attribution-Share Alike "
 "3.0 License <https://creativecommons.org/licenses/by-sa/3.0/>`_."
 msgstr ""
-"Esta obra está autorizada bajo una licencia `Creative Commons Attribution-"
-"Share Alike 3.0 License <https://creativecommons.org/licenses/by-sa/3.0/>`_."
+"Esta obra está autorizada bajo una licencia `Creative Commons "
+"Attribution-Share Alike 3.0 License <https://creativecommons.org/licenses"
+"/by-sa/3.0/>`_."
 
 #: ../../build/docs/general-intro/introduction.rst:97
 msgid "Become a sponsor"
