--- a/locale/es/LC_MESSAGES/un_sdg/data.po
+++ b/locale/es/LC_MESSAGES/un_sdg/data.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Prizren 2.9\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-05-08 16:17+0000\n"
+"POT-Creation-Date: 2024-11-04 20:27-0600\n"
 "PO-Revision-Date: 2024-03-22 16:47+0000\n"
 "Last-Translator: Celia Virginia Vergara Castillo <vicky@erosion.dev>\n"
 "Language-Team: Spanish <https://weblate.osgeo.org/projects/"
@@ -65,16 +65,18 @@ msgid "Supported PostGIS version"
 msgstr "Versión PostGIS compatible"
 
 #: ../../build/docs/un_sdg/data.rst:38
+#, fuzzy
 msgid ""
 "These requirements are met on OSGeoLive. When the required software is "
 "installed, open a terminal window by pressing ``ctrl-alt-t`` and follow "
-"the instructions.  Information about installing OSGeoLive can be found in"
-" :doc:`../general-intro/osgeolive` of this workshop."
+"the instructions. Information about installing OSGeoLive can be found in "
+":doc:`../general-intro/osgeolive` of this workshop."
 msgstr ""
 "Estos requisitos se cumplen en OSGeoLive. Cuando se instale el software "
-"requerido, abra una ventana de terminal presionando ``ctrl-alt-t`` y siga "
-"las instrucciones. La información sobre la instalación de OSGeoLive se puede "
-"encontrar en :ref:`general-intro/chapter-3:Instalación` de este taller."
+"requerido, abra una ventana de terminal presionando ``ctrl-alt-t`` y siga"
+" las instrucciones. La información sobre la instalación de OSGeoLive se "
+"puede encontrar en :ref:`general-intro/chapter-3:Instalación` de este "
+"taller."
 
 #: ../../build/docs/un_sdg/data.rst:43
 msgid ""
@@ -324,7 +326,8 @@ msgstr ""
 "Munshigang, Bangladesh."
 
 #: ../../build/docs/un_sdg/data.rst:235
-msgid "See  :ref:`basic/data:Option 3) Download using Overpass XAPI`"
+#, fuzzy
+msgid "See :ref:`basic/data:Option 3) Download using Overpass XAPI`"
 msgstr "Ver :ref:`basic/data:Opción 3) Descargar usando Overpass XAPI`"
 
 #: ../../build/docs/un_sdg/data.rst:238
@@ -376,3 +379,4 @@ msgstr "Información de configuración para edificios"
 #: ../../build/docs/un_sdg/data.rst:296
 msgid "Configuration information for Waterways"
 msgstr "Información de configuración para vías navegables"
+
