(locale/ja) Marking string that needs revision on translation

--- a/locale/ja/LC_MESSAGES/general-intro/introduction.po
+++ b/locale/ja/LC_MESSAGES/general-intro/introduction.po
@@ -3,160 +3,188 @@
 # This file is distributed under the same license as the Workshop FOSS4G
 # Firenze package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2022.
-# 
+#
 # Translators:
 # Ko Nagase <nagase@georepublic.co.jp>, 2021
 # Taro Matsuzawa <taro@georepublic.co.jp>, 2021
-# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Firenze 2.8\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-07-14 13:45-0500\n"
+"POT-Creation-Date: 2024-11-04 21:10-0600\n"
 "PO-Revision-Date: 2021-10-10 17:39+0000\n"
 "Last-Translator: Taro Matsuzawa <taro@georepublic.co.jp>, 2021\n"
-"Language-Team: Japanese (https://app.transifex.com/pgrouting/teams/1219/ja/)\n"
-"MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.9.1\n"
 "Language: ja\n"
+"Language-Team: Japanese "
+"(https://app.transifex.com/pgrouting/teams/1219/ja/)\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=utf-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Generated-By: Babel 2.12.1\n"
 
-#: ../../build/docs/general-intro/chapter-1.rst:11
+#: ../../build/docs/general-intro/introduction.rst:11
 msgid "Introduction"
 msgstr "序章"
 
-#: ../../build/docs/general-intro/chapter-1.rst:14
-msgid "Abstract"
-msgstr "要約"
-
-#: ../../build/docs/general-intro/chapter-1.rst:15
-msgid ""
-"|pgrouting-web| adds routing functionality to |postgis-web|. This "
-"introductory workshop will demonstrate the routing functionality by "
-"providing practical examples using |osm-web| road network data. It will be "
-"covering topics starting from preparing the data, making routing queries, "
-"writing custom 'plpgsql' functions up to integrating pgRouting with other "
-"FOSS4G tools."
+#: ../../build/docs/general-intro/introduction.rst:13
+msgid "|pgrouting-web| adds routing functionality to |postgis-web|."
 msgstr ""
 
-#: ../../build/docs/general-intro/chapter-1.rst:21
+#: ../../build/docs/general-intro/introduction.rst:15
 msgid ""
-"Road networks navigation require complex graph algorithms. pgRouting is an "
-"extendible open-source library that provides a variety of tools for graph "
-"algorithms, including shortest path search, as an extension of PostgreSQL "
-"and PostGIS."
+"Please see the :doc:`contents <../index>` for full content of FOSS4G "
+"Belém workshop.  This workshop covers two levels for using pgRouting: "
+"`Basic`_ and `Advanced`_."
 msgstr ""
 
-#: ../../build/docs/general-intro/chapter-1.rst:24
-msgid ""
-"The workshop will focus on real road networks of the FOSS4G Firenze "
-"surrounding area. It will cover the following topics:"
+#: ../../build/docs/general-intro/introduction.rst:20
+msgid "Basic"
 msgstr ""
 
-#: ../../build/docs/general-intro/chapter-1.rst:27
+#: ../../build/docs/general-intro/introduction.rst:22
+msgid ""
+"will demonstrate the routing functionality by providing examples using "
+"|osm-web| road network data from Belém. Covering topics from how to "
+"prepare the data, making routing queries, understanding the results, up "
+"to writing a custom 'plpgsql' function that can be integrated with other "
+"FOSS tools."
+msgstr ""
+
+#: ../../build/docs/general-intro/introduction.rst:28
 msgid "Installing pgRouting."
 msgstr ""
 
-#: ../../build/docs/general-intro/chapter-1.rst:28
+#: ../../build/docs/general-intro/introduction.rst:29
 msgid "Creating a routing topology."
 msgstr ""
 
-#: ../../build/docs/general-intro/chapter-1.rst:29
-msgid "Importing  |osm-web| road network data."
+#: ../../build/docs/general-intro/introduction.rst:30
+msgid "Importing |osm-web| road network data."
 msgstr ""
 
-#: ../../build/docs/general-intro/chapter-1.rst:30
+#: ../../build/docs/general-intro/introduction.rst:31
 msgid "Using pgRouting algorithms."
 msgstr ""
 
-#: ../../build/docs/general-intro/chapter-1.rst:31
+#: ../../build/docs/general-intro/introduction.rst:32
 msgid "Writing advanced queries."
 msgstr ""
 
-#: ../../build/docs/general-intro/chapter-1.rst:32
-msgid "Writing a custom PostgreSQL stored procedure in ‘plpgsql’."
+#: ../../build/docs/general-intro/introduction.rst:33
+msgid "Writing a custom PostgreSQL stored procedure in `plpgsql`"
 msgstr ""
 
-#: ../../build/docs/general-intro/chapter-1.rst:34
-msgid ""
-"Please see the :doc:`contents <../index>` for full content of this workshop."
-msgstr ""
-
-#: ../../build/docs/general-intro/chapter-1.rst:37
+#: ../../build/docs/general-intro/introduction.rst:36
+#: ../../build/docs/general-intro/introduction.rst:49
 msgid "Prerequisites"
 msgstr "前提条件"
 
-#: ../../build/docs/general-intro/chapter-1.rst:38
-msgid "Workshop level: intermediate."
+#: ../../build/docs/general-intro/introduction.rst:37
+#, fuzzy
+msgid "Workshop level: basic."
 msgstr "ワークショップの難易度: 中級"
 
-#: ../../build/docs/general-intro/chapter-1.rst:39
-msgid "Attendee's previous knowledge: SQL (PostgreSQL, PostGIS)"
+#: ../../build/docs/general-intro/introduction.rst:38
+msgid "Previous knowledge: SQL (PostgreSQL, PostGIS)"
 msgstr ""
 
-#: ../../build/docs/general-intro/chapter-1.rst:40
+#: ../../build/docs/general-intro/introduction.rst:39
+#: ../../build/docs/general-intro/introduction.rst:52
+msgid "Equipments: `OSGeoLive <https://live.osgeo.org>`__ (17)"
+msgstr ""
+
+#: ../../build/docs/general-intro/introduction.rst:42
+msgid "Advanced"
+msgstr ""
+
+#: ../../build/docs/general-intro/introduction.rst:44
 msgid ""
-"Equipments: This workshop uses `OSGeoLive <https://live.osgeo.org>`__ (15.0)"
+"pgRouting is an extendible open-source library that provides a variety of"
+" tools for graph algorithms, this is not limited to routing vehicles. The"
+" advanced section covers several graph problems that can be solved using "
+"pgRouting."
 msgstr ""
 
-#: ../../build/docs/general-intro/chapter-1.rst:43
-msgid "Authors"
+#: ../../build/docs/general-intro/introduction.rst:50
+#, fuzzy
+msgid "Workshop level: Advanced."
+msgstr "ワークショップの難易度: 中級"
+
+#: ../../build/docs/general-intro/introduction.rst:51
+msgid "Previous knowledge: SQL (PostgreSQL, PostGIS, pgRouting)"
 msgstr ""
 
-#: ../../build/docs/general-intro/chapter-1.rst:61
-msgid "Alphabetical Order:"
-msgstr "アルファベット順:"
+#: ../../build/docs/general-intro/introduction.rst:55
+msgid "Aknowledments"
+msgstr ""
 
-#: ../../build/docs/general-intro/chapter-1.rst:63
+#: ../../build/docs/general-intro/introduction.rst:58
+#, fuzzy
+msgid "Sponsored by"
+msgstr "Supported by"
+
+#: ../../build/docs/general-intro/introduction.rst:-1
+msgid "Paragon Corporation"
+msgstr ""
+
+#: ../../build/docs/general-intro/introduction.rst:64
+msgid "Developers & presenters of FOSS4G Belém workshop:"
+msgstr ""
+
+#: ../../build/docs/general-intro/introduction.rst:65
 msgid ""
-"*Daniel Kastl* is founder and CEO of `Georepublic "
-"<https://georepublic.info>`_ and works in Germany and Japan. He is "
-"moderating and promoting the pgRouting community and development since the "
-"beginning of the project, and he's an active OSM contributor in Japan. OSGeo"
-" Charter member."
+"*Vicky Vergara* Is a freelance developer from Mexico. She's the core "
+"developer of pgRouting project and GSoC Mentor. OSGeo Charter member."
 msgstr ""
 
-#: ../../build/docs/general-intro/chapter-1.rst:67
+#: ../../build/docs/general-intro/introduction.rst:68
 msgid ""
-"*Ko Nagase* works at `Georepublic <https://georepublic.info>`_  and works in"
-" Japan. tests of pgRouting project on Windows and Mac OSX environment. One "
-"of the contributors  of pgRoutingLayers for QGIS. OSGeo Charter member."
+"*Ramón Ríos* Is a freelance developer from Mexico.  Lead engenieer for "
+"ParkUpFront"
 msgstr ""
 
-#: ../../build/docs/general-intro/chapter-1.rst:70
+#: ../../build/docs/general-intro/introduction.rst:73
+msgid "Past and present tutors and developers"
+msgstr ""
+
+#: ../../build/docs/general-intro/introduction.rst:74
 msgid ""
-"*Stephen Woodbridge* works at the greater Boston, MA area. He was a "
-"pgrouting PSC member and developer. He develops solutions for mapping, "
-"geocoding, reverse geocoding, routing and processing of remote sensing "
-"imagery. OSGeo Charter member."
+"Daniel Kastl, José Ríos, Ko Nagase, Stephen Woodbridge, Swapnil Joshi, "
+"Rajat Shinde, Ramón Ríos, Rohith Reddy, Vicky Vergara"
 msgstr ""
 
-#: ../../build/docs/general-intro/chapter-1.rst:73
-msgid ""
-"*Vicky Vergara* works at `Georepublic <https://georepublic.info>`_ and works"
-" in Mexico. She's the core developer of pgRouting project and GSoC Mentor. "
-"OSGeo Charter member."
+#: ../../build/docs/general-intro/introduction.rst:85
+msgid "Past and present supporters"
 msgstr ""
 
-#: ../../build/docs/general-intro/chapter-1.rst:78
+#: ../../build/docs/general-intro/introduction.rst:86
+msgid "Georepublic, Paragon Corporation"
+msgstr ""
+
+#: ../../build/docs/general-intro/introduction.rst:90
 msgid "License"
 msgstr "ライセンス"
 
-#: ../../build/docs/general-intro/chapter-1.rst:79
+#: ../../build/docs/general-intro/introduction.rst:91
 msgid ""
-"This work is licensed under a `Creative Commons Attribution-Share Alike 3.0 "
-"License <https://creativecommons.org/licenses/by-sa/3.0/>`_."
+"This work is licensed under a `Creative Commons Attribution-Share Alike "
+"3.0 License <https://creativecommons.org/licenses/by-sa/3.0/>`_."
 msgstr ""
 
-#: ../../build/docs/general-intro/chapter-1.rst:84
-msgid "Supported by"
-msgstr "Supported by"
-
-msgid "Georepublic"
+#: ../../build/docs/general-intro/introduction.rst:97
+msgid "Become a sponsor"
 msgstr ""
 
-msgid "Paragon Corporation"
+#: ../../build/docs/general-intro/introduction.rst:-1
+msgid "The Linux Foundation"
+msgstr ""
+
+#: ../../build/docs/general-intro/introduction.rst:-1
+msgid "Open Collective"
+msgstr ""
+
+#: ../../build/docs/general-intro/introduction.rst:-1
+msgid "OSGeo Foundation"
 msgstr ""
