--- a/locale/ja/LC_MESSAGES/basic/data.po
+++ b/locale/ja/LC_MESSAGES/basic/data.po
@@ -3,26 +3,26 @@
 # This file is distributed under the same license as the Workshop FOSS4G
 # Firenze package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2022.
-# 
+#
 # Translators:
 # Ko Nagase <nagase@georepublic.co.jp>, 2021
 # Taro Matsuzawa <taro@georepublic.co.jp>, 2021
-# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Firenze 2.8\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-05-08 16:17+0000\n"
+"POT-Creation-Date: 2024-11-04 21:10-0600\n"
 "PO-Revision-Date: 2021-10-10 17:39+0000\n"
 "Last-Translator: Taro Matsuzawa <taro@georepublic.co.jp>, 2021\n"
-"Language-Team: Japanese (https://app.transifex.com/pgrouting/teams/1219/ja/)\n"
+"Language: ja\n"
+"Language-Team: Japanese "
+"(https://app.transifex.com/pgrouting/teams/1219/ja/)\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.12.1\n"
-"Language: ja\n"
-"Plural-Forms: nplurals=1; plural=0;\n"
 
 #: ../../build/docs/basic/data.rst:12
 msgid "Prepare Data"
@@ -45,151 +45,161 @@ msgid "pgRouting is installed as extension. This requires:"
 msgstr "pgRouting は拡張としてインストールされます。以下が必要となります:"
 
 #: ../../build/docs/basic/data.rst:27
-msgid "Supported PostgreSQL version"
+msgid "PostgreSQL"
 msgstr ""
 
 #: ../../build/docs/basic/data.rst:28
-msgid "Supported PostGIS version"
+msgid "PostGIS"
 msgstr ""
 
 #: ../../build/docs/basic/data.rst:30
 msgid ""
 "These requirements are met on OSGeoLive. When the required software is "
-"installed, open a terminal window by pressing :code:`ctrl-alt-t` and follow "
-"the instructions. Information about installing OSGeoLive can be found on "
-":doc:`../general-intro/osgeolive`."
+"installed, open a terminal window by pressing :code:`ctrl-alt-t` and "
+"follow the instructions."
 msgstr ""
 
-#: ../../build/docs/basic/data.rst:33
+#: ../../build/docs/basic/data.rst:34
 msgid ""
-"If OSGeoLive is not being used, please refer to the chapter's appendix to "
-"set up the user \"user\"."
+"Information about installing OSGeoLive can be found on :doc:`../general-"
+"intro/osgeolive`."
 msgstr ""
 
-#: ../../build/docs/basic/data.rst:36
+#: ../../build/docs/basic/data.rst:37
+msgid ""
+"If OSGeoLive is not being used, please refer to the chapter's appendix to"
+" set up the user ``user``."
+msgstr ""
+
+#: ../../build/docs/basic/data.rst:41
 msgid "Create a pgRouting compatible database"
 msgstr ""
 
-#: ../../build/docs/basic/data.rst:38
+#: ../../build/docs/basic/data.rst:43
 msgid ""
 "Depending on the postgres configuration :code:`-U <user>` is needed on "
 ":code:`psql` commands"
 msgstr ""
 
-#: ../../build/docs/basic/data.rst:47
+#: ../../build/docs/basic/data.rst:51
+msgid "To exit the database use ``\\q``"
+msgstr ""
+
+#: ../../build/docs/basic/data.rst:54
 msgid "Get the Workshop Data"
 msgstr "ワークショップデータの取得"
 
-#: ../../build/docs/basic/data.rst:51
+#: ../../build/docs/basic/data.rst:58
 msgid ""
-"The pgRouting workshop will make use of OpenStreetMap data, which is already"
-" available on `OSGeoLive <http://live.osgeo.org>`_. This workshop will use "
-"the ``Prizren`` city data and is a snapshot of March 2023."
+"The pgRouting workshop will make use of OpenStreetMap data, which is "
+"already available on `OSGeoLive <https://live.osgeo.org>`_. This workshop"
+" will use the ``Belém`` city data and is a snapshot of Sep 2024."
 msgstr ""
 
-#: ../../build/docs/basic/data.rst:56
+#: ../../build/docs/basic/data.rst:63
 msgid "Getting the data"
 msgstr "データの取得"
 
-#: ../../build/docs/basic/data.rst:59
+#: ../../build/docs/basic/data.rst:66
 msgid "Option 1) When using OSGeoLive"
 msgstr ""
 
-#: ../../build/docs/basic/data.rst:61
-msgid "OSGeoLive comes with osm data from the city of Prizren."
+#: ../../build/docs/basic/data.rst:68
+msgid "OSGeoLive comes with OSM data from the city of Belém."
 msgstr ""
 
-#: ../../build/docs/basic/data.rst:69
+#: ../../build/docs/basic/data.rst:76
 msgid "Option 2) Download data form OSGeoLive website"
 msgstr ""
 
-#: ../../build/docs/basic/data.rst:71
+#: ../../build/docs/basic/data.rst:78
 msgid "The exact same data can be found on the OSGeoLive download page."
 msgstr ""
 
-#: ../../build/docs/basic/data.rst:80
+#: ../../build/docs/basic/data.rst:86
 msgid "Option 3) Download using Overpass XAPI"
 msgstr ""
 
-#: ../../build/docs/basic/data.rst:82
+#: ../../build/docs/basic/data.rst:88
 msgid ""
-"The following downloads the latest OSM data on using the same area. Using "
-"this data in the workshop can generate variations in the results, due to "
-"changes since March 2023."
+"The following downloads the latest OSM data on using the same area. Using"
+" this data in the workshop can generate variations in the results, due to"
+" changes since Sep 2024."
 msgstr ""
 
-#: ../../build/docs/basic/data.rst:92
+#: ../../build/docs/basic/data.rst:98
 msgid ""
-"More information about how to download OpenStreetMap data can be found in "
-"https://wiki.openstreetmap.org/wiki/Downloading_data"
+"More information about how to download OpenStreetMap data can be found in"
+" https://wiki.openstreetmap.org/wiki/Downloading_data"
 msgstr ""
 
-#: ../../build/docs/basic/data.rst:95
+#: ../../build/docs/basic/data.rst:101
+#, fuzzy
 msgid ""
 "An alternative for very large areas is to use the download services of "
-"`Geofabrik <http://download.geofabrik.de>`_."
+"`Geofabrik <https://download.geofabrik.de>`_."
 msgstr ""
 "もっと広いエリアのデータを `Geofabrik <http://download.geofabrik.de>`_ "
 "のダウンロードサービスから取得するという方法もあります。"
 
-#: ../../build/docs/basic/data.rst:100
+#: ../../build/docs/basic/data.rst:106
 msgid "Upload data to the database"
 msgstr ""
 
-#: ../../build/docs/basic/data.rst:102
-msgid ""
-"The next step is to run ``osm2pgrouting`` converter, which is a command line"
-" tool that inserts the data in the database, \"ready\" to be used with "
-"pgRouting. Additional information about ``osm2pgrouting`` can be found at "
-"the :ref:`osm2pgrouting`"
-msgstr ""
-
-#: ../../build/docs/basic/data.rst:106
-msgid "For this step:"
-msgstr ""
-
 #: ../../build/docs/basic/data.rst:108
-msgid "the osm2pgrouting default ``mapconfig.xml`` configuration file is used"
-msgstr ""
-
-#: ../../build/docs/basic/data.rst:109
-msgid "and the ``~/Desktop/workshop/Prizren_XK.osm`` data"
-msgstr ""
-
-#: ../../build/docs/basic/data.rst:110
-msgid "with the ``city_routing`` database"
+msgid ""
+"The next step is to run ``osm2pgrouting`` converter, which is a command "
+"line tool that inserts the data in the database, \"ready\" to be used "
+"with pgRouting. Additional information about ``osm2pgrouting`` can be "
+"found at the :ref:`osm2pgrouting`"
 msgstr ""
 
 #: ../../build/docs/basic/data.rst:112
-msgid "From a terminal window :code:`ctrl-alt-t`."
+msgid "For this step:"
+msgstr ""
+
+#: ../../build/docs/basic/data.rst:114
+msgid "the osm2pgrouting default ``mapconfig.xml`` configuration file is used"
 msgstr ""
 
 #: ../../build/docs/basic/data.rst:115
+msgid "and the ``~/Desktop/workshop/BELEM_BR.osm`` data"
+msgstr ""
+
+#: ../../build/docs/basic/data.rst:116
+msgid "with the ``city_routing`` database"
+msgstr ""
+
+#: ../../build/docs/basic/data.rst:118
+msgid "From a terminal window :code:`ctrl-alt-t`."
+msgstr ""
+
+#: ../../build/docs/basic/data.rst:121
 msgid "Run the osm2pgrouting converter"
 msgstr ""
 
-#: ../../build/docs/basic/data.rst:123
+#: ../../build/docs/basic/data.rst:128
 msgid "Depending on the osm2pgrouting version `-W password` is needed"
 msgstr ""
 
-#: ../../build/docs/basic/data.rst:126
+#: ../../build/docs/basic/data.rst:131
 msgid "Output:"
 msgstr ""
 
-#: ../../build/docs/basic/data.rst:133
+#: ../../build/docs/basic/data.rst:148
 msgid "Tables on the database"
 msgstr ""
 
-#: ../../build/docs/basic/data.rst:140
+#: ../../build/docs/basic/data.rst:154
 msgid "If everything went well the result should look like this:"
 msgstr "もし全てうまく行っていれば以下の様な結果が得られるでしょう:"
 
-#: ../../build/docs/basic/data.rst:146
+#: ../../build/docs/basic/data.rst:160
 msgid "Chapter: Appendix"
 msgstr ""
 
-#: ../../build/docs/basic/data.rst:149
+#: ../../build/docs/basic/data.rst:163
 msgid ""
-"OSGeoLive's account name on the database is ``\"user\"``. To easily use the "
+"OSGeoLive's account name on the database is ``user``. To easily use the "
 "workshop when not using OSGeoLive this extra steps are needed:"
 msgstr ""
