(locale/es) Marking string that needs revision on translation

--- a/locale/es/LC_MESSAGES/general-intro/introduction.po
+++ b/locale/es/LC_MESSAGES/general-intro/introduction.po
@@ -11,17 +11,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Prizren 2.9\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-11-04 20:27-0600\n"
+"POT-Creation-Date: 2024-11-04 21:10-0600\n"
 "PO-Revision-Date: 2024-03-22 16:47+0000\n"
 "Last-Translator: Celia Virginia Vergara Castillo <vicky@erosion.dev>\n"
-"Language-Team: Spanish <https://weblate.osgeo.org/projects/"
-"pgrouting-workshop/general-intro-introduction/es/>\n"
 "Language: es\n"
+"Language-Team: Spanish <https://weblate.osgeo.org/projects/pgrouting-"
+"workshop/general-intro-introduction/es/>\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 5.3\n"
 "Generated-By: Babel 2.12.1\n"
 
 #: ../../build/docs/general-intro/introduction.rst:11
@@ -35,9 +34,9 @@ msgstr ""
 #: ../../build/docs/general-intro/introduction.rst:15
 #, fuzzy
 msgid ""
-"Please see the :doc:`contents <../index>` for full content of FOSS4G  "
-"workshop.  This workshop covers two levels for using pgRouting: `Basic`_ "
-"and `Advanced`_."
+"Please see the :doc:`contents <../index>` for full content of FOSS4G "
+"Belém workshop.  This workshop covers two levels for using pgRouting: "
+"`Basic`_ and `Advanced`_."
 msgstr ""
 "Consulte :doc:`contents <../index>` para obtener todo el contenido de "
 "este taller."
@@ -139,7 +138,7 @@ msgid "Paragon Corporation"
 msgstr "Paragon Corporation"
 
 #: ../../build/docs/general-intro/introduction.rst:64
-msgid "Developers & presenters of FOSS4G  workshop:"
+msgid "Developers & presenters of FOSS4G Belém workshop:"
 msgstr ""
 
 #: ../../build/docs/general-intro/introduction.rst:65
